- View -> Reporting -> Export Data no longer fails if there are no hosts to
  export data about.
- Armitage now runs post/auxiliary modules as jobs (meaning you may kill them
  using View -> Jobs)
- hashdump and smart_hashdump post modules will now announce to the event log
  that hashes were dumped when they're run (whether through menu or module
  the module browser).

09.26.11 - take 2
--------
- Improved performance when launching exploits and other modules that open
  a new tab.
- Launching an exploit will only open a tab when fewer than four hosts are 
  highlighted. If four or more are highlighted, then Armitage will use the old
  behavior of silently launching each exploit. [You're supposed to be able to
  attack hundreds of hosts at once--hence my desire to add this caveat]
- When launching an exploit in the background, Armitage will show a dialog 
  indicating that the exploit was launched against X hosts.

09.26.11 
--------
- You may now drag and drop Armitage tabs to rearrange their order.
- Armitage "show all commands" option (for better exploit feedback) is now on 
  by default. 
- You may now right-click a screenshot/webcam shot to zoom in or out on the 
  image. The zoom-level stays fixed (in case you refresh the image later)
- Added a menu to the X button in the tabs. Through this menu you may open the
  current tab in its own window or close all like tabs.
- Updated Hosts -> Import Hosts to reflect the current importable file types.
- Added View -> Reporting -> Export Data to dump most Metasploit tables into 
  TSV and XML files suitable for parsing (by you!) into a report format of 
  some sort. 
- Armitage now encodes (-e x86/shikata_ga_nai -i 3) any Windows meterpreter 
  payload generated from the module launcher dialog.
- [host] -> Meterpreter -> Access -> Duplicate now uses multi_meter_inject to
  launch Meterpreter into memory directly (rather than upload and execute a file)